=== What's New in 2.4 Since 2.3

This section covers the changes made from version 2.3 to version 2.4.

Also see <<new-in-sik>>.

[[kafka-client-2.4]]
==== Kafka Client Version

This version requires the 2.4.0 `kafka-clients` or higher.

[[x24-carl]]
==== ConsumerAwareRabalanceListener

Like `ConsumerRebalanceListener`, this interface now has an additional method `onPartitionsLost`.
Refer to the Apache Kafka documentation for more information.

Unlike the `ConsumerRebalanceListener`, The default implementation does **not** call `onPartitionsRevoked`.
Instead, the listener container will call that method after it has called `onPartitionsLost`; you should not, therefore, do the same when implementing `ConsumerAwareRabalanceListener`.

See the IMPORTANT note at the end of <<rebalance-listeners>> for more information.

[[x24-eh]]
==== GenericErrorHandler

The `isAckAfterHandle()` default implementation now returns true by default.

=== Migration Guide

* This release is essentially the same as the 2.3.x line, except it has been compiled against the 2.4 `kafka-clients` jar, due to a binary incompatibility.

* To use Spring for Apache Kafka 2.4.x with Spring Boot 2.2.x, see <<deps-for-24x>>.

* See <<x24-carl>> for important information about rebalance listeners.